--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "NzY0MzcyODM4MTU2NzMwNDI4.X4FTrQ.rGJQghbNY8PBB9DhuZt063BLOT4",
-  "prefix": "t!"
+  "token": "Your_Wonderful_Token",
+  "prefix": "Your_Wonderful_Prefix"
 }
