Moved 8ball settings to config.json

--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {
   "token": "Your_Wonderful_Token",
-  "prefix": "Your_Wonderful_Prefix"
+  "prefix": "Your_Wonderful_Prefix",
+
+//other settings...
+
+  "8ball_options": ["yes", "no", "idk"] //add more here :)
 }
